--- a/laravel/docker-compose.yaml
+++ b/laravel/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
       app:
         build: .
         container_name: app
-        entrypoint: dockerize -wait tcp://db:3306 -timeout 40s /var/www/.docker/entrypoint.sh
+        entrypoint: dockerize -wait tcp://db:3306 -timeout 40s bash ./.docker/entrypoint.sh
         volumes:
           - .:/var/www
         networks: 
