--- a/laravel/Dockerfile
+++ b/laravel/Dockerfile
@@ -1,5 +1,5 @@
 FROM php:7.3.6-fpm-alpine3.9
-RUN apk add --no-cache openssl bash mysql-client
+RUN apk add --no-cache openssl bash mysql-client nodejs npm
 RUN docker-php-ext-install pdo pdo_mysql
 
 ENV DOCKERIZE_VERSION v0.6.1
@@ -11,10 +11,11 @@ RUN rm -rf /var/www/html
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-#RUN composer install && \
-#            cp .env.example .env && \
-#            php artisan key:generate && \
-#            php artisan config:cache
+#RUN composer install 
+#   && \
+#   cp .env.example .env && \
+#   php artisan key:generate && \
+#   php artisan config:cache
 
 COPY . /var/www
 
