--- a/laravel/docker-compose.yaml
+++ b/laravel/docker-compose.yaml
@@ -4,7 +4,12 @@ services:
       app:
         build: .
         container_name: app
-        entrypoint: dockerize -wait tcp://db:3306 -timeout 40s bash ./.docker/entrypoint.sh
+        entrypoint: dockerize -template ./.docker/app/.env:.env -wait tcp://db:3306 -timeout 40s bash ./.docker/entrypoint.sh
+        environment:
+          - DB_HOST=db
+          - DB_DATABASE=laravel
+          - DB_USERNAME=root
+          - DB_PASSWORD=root
         volumes:
           - .:/var/www
         networks: 
@@ -18,6 +23,10 @@ services:
       nginx:
         build: .docker/nginx
         container_name: nginx
+        entrypoint: dockerize -template ./.docker/nginx/template/nginx.tmpl:./.docker/nginx/nginx.conf nginx -g "daemon off;"
+        environment:
+           - NGINX_HOST=app
+           - NGINX_PORT=9000
         restart: always
         tty: true
         ports:
