--- a/laravel/cloudbuild.prod.yaml
+++ b/laravel/cloudbuild.prod.yaml
@@ -27,9 +27,10 @@ steps:
   name: 'gcr.io/cloud-builders/docker'
   args: ['build','-t','gcr.io/$PROJECT_ID/app-laravel:$SHORT_SHA','-f','Dockerfile.prod','.'] # O $SHORT_SHA é para gerar um nome de imagem diferente para cada imagem baseado no commit  
 
-- id: "Pushing image teste de lagurag"  
+- id: "Pushing image"  
   name: 'gcr.io/cloud-builders/docker'
   args: ['push','gcr.io/$PROJECT_ID/app-laravel:$SHORT_SHA']
 
 
 
+  
