--- a/laravel/cloudbuild.yaml
+++ b/laravel/cloudbuild.yaml
@@ -2,24 +2,28 @@ steps:
 
 - id: "Rodando docker-compose"
   name: 'gcr.io/$PROJECT_ID/docker-compose:1.24.0'
-  args: ['-f','docker-compose.cloudbuild.yaml','up','-d']
+  args: ['-f', 'laravel/docker-compose.cloudbuid.yaml', 'up', '-d']
 
-- id: "Rodando composer"
+- id: "Rodando docker-ps"
   name: 'gcr.io/cloud-builders/docker'
-  args: ['exec','-t','app','composer','install']
+  args: ['ps']
+
+- id: "Rodando Composer"
+  name: 'gcr.io/cloud-builders/docker'
+  args: ['exec', '-t', 'app', 'composer', 'install']
 
 - id: "Copiando .env"
   name: 'gcr.io/cloud-builders/docker'
-  args: ['exec','-t','app','cp','.env.example','.env']
+  args: ['exec', '-t', 'app', 'cp', '.env.example', '.env']
 
 - id: "Rodando key:generate"
   name: 'gcr.io/cloud-builders/docker'
-  args: ['exec','-t','app','php','/var/www/artisan','key:generate']    
+  args: ['exec', '-t', 'app', 'php', '/var/www/artisan', 'key:generate']
 
 - id: "Rodando migrations"
   name: 'gcr.io/cloud-builders/docker'
-  args: ['exec','-t','app','php','/var/www/artisan','migrate']    
+  args: ['exec', '-t', 'app', 'cp', '/var/www/artisan', 'migrate']
 
 - id: "Rodando Phpunit"
   name: 'gcr.io/cloud-builders/docker'
-  args: ['exec','-t','app','php','/var/www/vendor/bin/phpunit','-c','/var/www/phpunit.xml']    
+  args: ['exec', '-t', 'app', 'php', '/var/www/vendor/bin/phpunit', '-c', '/var/www/phpunit.xml']
