--- a/laravel/cloudbuild.prod.yaml
+++ b/laravel/cloudbuild.prod.yaml
@@ -1,7 +1,7 @@
 steps:
 - id: "Rodando docker-compose"
   name: 'gcr.io/$PROJECT_ID/docker-compose:1.24.0'
-  args: ['-f','docker-compose.cloudbuild.yaml','up','-d']
+  args: ['-f','/laravel/docker-compose.cloudbuild.yaml','up','-d']
 
 - id: "Rodando composer"
   name: 'gcr.io/cloud-builders/docker'
@@ -25,8 +25,12 @@ steps:
 
 - id: "Building image from Dockerfile.prod"
   name: 'gcr.io/cloud-builders/docker'
-  args: ['build','-t','gcr.io/$PROJECT_ID/app-laravel:$SHORT_SHA','-f','Dockerfile.prod','.']
-
+  args: ['build','-t','gcr.io/$PROJECT_ID/app-laravel:$SHORT_SHA','-f','Dockerfile.prod','.'] # O $SHORT_SHA é para gerar um nome de imagem diferente para cada imagem baseado no commit  
+#teste commit novo dfgdsf fdsaf fdsfsadfa dfsad fsdfasd fsdafasfdafsa fsdafas fsaf fsdafsd oiufoisuafsaoifusaofua tsteste fdsafasd teste fdsfasdf
 - id: "Pushing image"  
   name: 'gcr.io/cloud-builders/docker'
   args: ['push','gcr.io/$PROJECT_ID/app-laravel:$SHORT_SHA']
+
+
+
+  
