--- a/laravel/k8s/app/configmap.yaml
+++ b/laravel/k8s/app/configmap.yaml
@@ -15,6 +15,7 @@ data:
     DB_PORT=3306
     DB_DATABASE=laravel
     DB_USERNAME=root
+    DB_PASSWORD=a1s2d3f4
 
     BROADCAST_DRIVER=log
     CACHE_DRIVER=file
