--- a/laravel/docker-compose.cloudbuild.yaml
+++ b/laravel/docker-compose.cloudbuild.yaml
@@ -50,7 +50,7 @@ services:
           - ./.docker/dbdata:/var/lib/mysql
         environment:
           - MYSQL_DATABASE=laravel
-          - MYSQL_ROOT_PASSWORD=root
+          #- MYSQL_ROOT_PASSWORD=root
           - MYSQL_USER=root
         networks: 
             - app-network
