--- a/laravel/docker-compose.cloudbuild.yaml
+++ b/laravel/docker-compose.cloudbuild.yaml
@@ -5,7 +5,7 @@ services:
         build: .
         container_name: app
         entrypoint: dockerize -template ./.docker/app/.env:.env -wait tcp://db:3306 -timeout 40s bash ./.docker/entrypoint.sh
-        environment: #essas linhas estavam comentadas
+        environment: #essas linhas estavam comentadas fdsfsa
           - DB_HOST=db
           - DB_DATABASE=laravel
           - DB_USERNAME=root
