--- a/laravel/cloudbuild.prod.yaml
+++ b/laravel/cloudbuild.prod.yaml
@@ -1,7 +1,7 @@
 steps:
 - id: "Rodando docker-compose"
   name: 'gcr.io/$PROJECT_ID/docker-compose:1.24.0'
-  args: ['-f','laravel/docker-compose.yaml','up','-d']
+  args: ['-f','laravel/docker-compose.cloudbuild.yaml','up','-d']
 
 - id: "Rodando composer"
   name: 'gcr.io/cloud-builders/docker'
