--- a/laravel/cloudbuild.prod.yaml
+++ b/laravel/cloudbuild.prod.yaml
@@ -25,8 +25,8 @@ steps:
 
 - id: "Building image from Dockerfile.prod"
   name: 'gcr.io/cloud-builders/docker'
-  args: ['build','-t','gcr.io/$PROJECT_ID/app-laravel:$SHORT_SHA','-f','laravel/Dockerfile.prod','.'] # O $SHORT_SHA é para gerar um nome de imagem diferente para cada imagem baseado no commit  
-#teste commit novo dfgdsf fdsaf fdsfsadfa fsdafsa sdfsafda fdsafsda fdsafdsa teste dfsad fdsfadfa fsdfasd fsdafasfdafsa fsdafas fsaf fsdafsd oiufoisuafsaoifusaofua tsteste fdsafasd teste fdsfasdf
+  args: ['build','-t','gcr.io/$PROJECT_ID/app-laravel:$SHORT_SHA','-f','laravel/Dockerfile.prod','.'] 
+
 - id: "Pushing image"  
   name: 'gcr.io/cloud-builders/docker'
   args: ['push','gcr.io/$PROJECT_ID/app-laravel:$SHORT_SHA']
