--- a/laravel/cloudbuild.prod.yaml
+++ b/laravel/cloudbuild.prod.yaml
@@ -25,7 +25,7 @@ steps:
 
 - id: "Building image from Dockerfile.prod"
   name: 'gcr.io/cloud-builders/docker'
-  args: ['build','-t','gcr.io/$PROJECT_ID/app-laravel:$SHORT_SHA','-f','Dockerfile.prod','/laravel'] # O $SHORT_SHA é para gerar um nome de imagem diferente para cada imagem baseado no commit  
+  args: ['build','-t','gcr.io/$PROJECT_ID/app-laravel:$SHORT_SHA','-f','Dockerfile.prod','laravel'] # O $SHORT_SHA é para gerar um nome de imagem diferente para cada imagem baseado no commit  
 
 - id: "Pushing image"  
   name: 'gcr.io/cloud-builders/docker'
