--- a/laravel/Dockerfile.prod
+++ b/laravel/Dockerfile.prod
@@ -9,7 +9,7 @@ RUN rm -rf /var/www/html
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 COPY . /var/www
-RUN composer install &&
+RUN composer install 
 RUN php artisan config:cache 
 RUN chmod -R 777 storage
 
