--- a/laravel/Dockerfile.prod
+++ b/laravel/Dockerfile.prod
@@ -8,7 +8,7 @@ RUN rm -rf /var/www/html
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-COPY . /var/www
+COPY /laravel /var/www
 RUN composer install -v
 
 
