--- a/laravel/Dockerfile.prod
+++ b/laravel/Dockerfile.prod
@@ -9,7 +9,9 @@ RUN rm -rf /var/www/html
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 COPY /laravel /var/www
-RUN composer install -v
+RUN composer install && \
+            php artisan config:cache && \
+            chmod -R 777 storage
 
 
 RUN ln -s public html
