--- a/laravel/cloudbuild.prod.yaml
+++ b/laravel/cloudbuild.prod.yaml
@@ -31,6 +31,16 @@ steps:
   name: 'gcr.io/cloud-builders/docker'
   args: ['push','gcr.io/$PROJECT_ID/app-laravel:$SHORT_SHA']
 
+- id: 'Adjusting deployment file - k8s'
+name: 'gcr.io/cloud-builders/gcloud'
+entrypoint: '/bin/sh'
+args:
+  - '-c'
+  - |
+    sed 's#img-app-deployment#gcr.io/$PROJECT_ID/app-laravel:$SHORT_SHA#g' laravel/k8s/app/deployment.yaml > laravel/k8s/app/deployment-new.yaml;
+    cat laravel/k8s/app/deployment-new.yaml;
+
+
 
 
   
