--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,7 @@ services:
       - "3000:3000"
     
   db:
+    platform: linux/x86_64 # FOI NECESSÁRIO COLOCAR PARA RODAR NO MAC COM M1
     image: mysql:5.7
     command: --innodb-use-native-aio=0
     container_name: db
@@ -24,7 +25,7 @@ services:
     environment:
       - MYSQL_DATABASE=nodedb
       - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_USER=root
+      #- MYSQL_USER=root
     networks:
       - node-network
 
