--- a/go/Dockerfile
+++ b/go/Dockerfile
@@ -1,30 +1,20 @@
-############################
-# STEP 1 build executable binary
-############################
-FROM golang:alpine AS builder
+FROM golang:1.22.0-alpine3.19 as build
 
-# Install git.
-# Git is required for fetching the dependencies.
-RUN apk update && apk add --no-cache git
-WORKDIR $GOPATH/src/mypackage/myapp/
-COPY . .
+WORKDIR /app
 
-# Fetch dependencies.
-# Using go get.
-RUN go get -d -v
+COPY go.mod ./
+COPY main.go ./
 
-# Build the binary.
-#RUN go build -o /go/bin/hello
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -installsuffix cgo -ldflags="-w -s" -o /go/bin/hello
+RUN go build -o /server
 
-############################
-# STEP 2 build a small image
-############################
+
+
 FROM scratch
 
-# Copy our static executable.
-COPY --from=builder /go/bin/hello /go/bin/hello
+WORKDIR /
 
+COPY --from=build /server /server
 
-# Run the hello binary.
-ENTRYPOINT ["/go/bin/hello"]
+EXPOSE 8080
+
+ENTRYPOINT [ "/server" ]
